Выполнено задание по оптимизации графики

--- a/source/sass/blocks/functions.scss
+++ b/source/sass/blocks/functions.scss
@@ -87,7 +87,7 @@
   }
 
   @media (min-width: $tablet-width) {
-    padding: 77px 0 53px 52px;
+    padding: 77px 0 53px 53px;
   }
 
   @media (min-width: $desktop-width) {
@@ -128,13 +128,17 @@
 
   &:last-of-type {
     margin: 0 0 15px 0;
-    padding-bottom: 23px;
+    padding-bottom: 22px;
     border-bottom: 1px solid #d9d9d9;
 
     @media (min-width: $tablet-width) {
       margin: 0 auto 48px 0;
       padding: 0;
       border: none;
+    }
+
+    @media (min-width: $desktop-width) {
+      margin: 0 0 23px;
     }
   }
 
@@ -159,16 +163,8 @@
   column-gap: 15px;
   text-decoration: none;
 
-  &::after {
-    content: "";
-    width: 32px;
-    height: 10px;
-    background-color: inherit;
-    background-image: url("../img/main/guide-icon-arrow.svg");
-    background-repeat: no-repeat;
-  }
-
   @media (min-width: $tablet-width) {
+    transform: translateX(1px);
     margin: 0 auto 0 0;
     column-gap: 25px;
   }
@@ -178,12 +174,16 @@
   }
 }
 
-.functions__item-btn:hover::after,
-.functions__item-btn:active::after {
-  background-image: url("../img/main/guide-icon-arrow-large.svg");
+.functions__item-btn__icon {
+  transition: width 0.25s ease;
+}
+
+.functions__item-btn:hover .functions__item-btn__icon {
+  width: 32px;
 }
 
 .functions__item-btn-text {
+  max-width: 80%;
   font-size: 16px;
   line-height: 16px;
   color: $text-color-2;
