--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -4,7 +4,7 @@
   overflow: hidden;
 
   @media (min-width: $tablet-width) {
-    padding: 65px 0 68px;
+    padding: 58px 0 68px;
   }
 
   @media (min-width: $desktop-width) {
@@ -37,7 +37,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     column-gap: 60px;
-    row-gap: 142px;
+    row-gap: 140px;
   }
 
   @media (min-width: $desktop-width) {
@@ -51,7 +51,7 @@
   position: relative;
   width: 100%;
   margin: 0;
-  padding: 19px 20px 25px;
+  padding: 19px 0 24px;
 
   &::before {
     position: absolute;
@@ -101,7 +101,7 @@
   @media (min-width: $desktop-width) {
     min-width: 245px;
     width: 245px;
-    padding: 0 30px 40px 35px;
+    padding: 0 38px 40px 39px;
     column-gap: 80px;
   }
 
@@ -110,6 +110,7 @@
 
     @media (min-width: $tablet-width) {
       padding-top: 52px;
+      padding-bottom: 37px;
       background-color: $main-color-1;
       border: 2px solid $main-color-3;
     }
@@ -121,13 +122,13 @@
 }
 
 .catalog__item-cont {
-  margin-bottom: 13px;
+  margin-bottom: 11px;
   display: grid;
   grid-template-columns: 1fr 1fr;
 
   @media (min-width: $tablet-width) {
     width: 100%;
-    margin-bottom: 33px;
+    margin-bottom: 32px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -154,7 +155,7 @@
       @media (min-width: $tablet-width) {
         width: 60px;
         height: 60px;
-        margin-bottom: 49px;
+        margin-bottom: 47px;
         background-image: url("../img/catalog/icon-plus-more-tablet.svg");
       }
     }
@@ -163,7 +164,8 @@
 
 .catalog__item-title {
   max-width: 76px;
-  margin: 0 0 18px;
+  margin: 0 0 2px;
+  padding: 1px 0 0;
   grid-column: 2;
   font-weight: 400;
   font-size: 16px;
@@ -172,7 +174,7 @@
   text-transform: uppercase;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 21px;
+    margin-bottom: 18px;
     max-width: 155px;
     font-size: 20px;
     line-height: 24px;
@@ -180,6 +182,7 @@
   }
 
   @media (min-width: $desktop-width) {
+    margin-bottom: 22px;
     line-height: 21px;
   }
 
@@ -197,6 +200,7 @@
 }
 
 .catalog__item-link {
+  display: flex;
   text-decoration: none;
 
   &--img {
@@ -204,11 +208,11 @@
     grid-row: 1/ span 2;
 
     @media (min-width: $tablet-width) {
-      margin: -73px 0 34px;
+      margin: -73px 0 31px;
     }
 
     @media (min-width: $desktop-width) {
-      margin: -80px 0 46px;
+      margin: -80px 0 42px;
     }
   }
 }
@@ -227,11 +231,11 @@
 }
 
 .catalog__properties {
-  margin: 0;
-  padding: 0;
+  margin: 0 -1px 0 -1px;
   list-style-type: none;
 
   @media (min-width: $tablet-width) {
+    margin: 0;
     width: 100%;
   }
 }
@@ -246,16 +250,16 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding-bottom: 9px;
+    padding: 7px 0 8px;
   }
 
   &:nth-child(2n) {
     @media (min-width: $tablet-width) {
-      padding: 5px 0 6px;
+      padding: 6px 0 9px;
     }
 
     @media (min-width: $desktop-width) {
-      padding: 5px 0 7px;
+      padding: 6px 0 7px;
     }
   }
 
@@ -298,7 +302,7 @@
   @include button;
   padding: 10px 20px;
   display: block;
-  width: 100%;
+  width: 99%;
 
   @media (min-width: $tablet-width) {
     margin: 0 1px 0 3px;
