--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -222,7 +222,12 @@
   margin: 0 auto;
   display: flex;
   width: fit-content;
+  height: fit-content;
   justify-content: center;
+
+  @media (min-width: $desktop-width) {
+    margin: 0 0 0 auto;
+  }
 }
 
 .example__interactive-item {
