--- a/source/sass/blocks/how-work.scss
+++ b/source/sass/blocks/how-work.scss
@@ -2,12 +2,12 @@
   padding: 0 0 49px;
 
   @media (min-width: $tablet-width) {
-    padding: 0 0 47px;
+    padding: 0 0 46px;
     border-bottom: 1px solid #e6e6e6;
   }
 
   @media (min-width: $desktop-width) {
-    padding: 0 0 69px;
+    padding: 0 0 70px;
     border: none;
   }
 }
@@ -22,7 +22,7 @@
 
   @media (min-width: $tablet-width) {
     @include heading-tablet;
-    margin: 0 0 32px;
+    margin-bottom: 32px;
   }
 }
 
@@ -32,13 +32,16 @@
   list-style-type: none;
 
   @media (min-width: $tablet-width) {
+    transform: translateX(1px);
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 37px;
+    column-gap: 60px;
+    row-gap: 37px;
   }
 
   @media (min-width: $desktop-width) {
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    column-gap: 78px;
   }
 }
 
@@ -114,17 +117,17 @@
     min-height: 280px;
     flex-direction: column;
     column-gap: 0;
-    row-gap: 31px;
+    row-gap: 29px;
 
     &:nth-child(1) {
       background-image: url("../img/main/one.svg");
-      background-position: 127px 40px;
+      background-position: 126px 40px;
       background-repeat: no-repeat;
     }
 
     &:nth-child(2) {
       background-image: url("../img/main/two.svg");
-      background-position: 125px 38px;
+      background-position: 122px 38px;
       background-repeat: no-repeat;
     }
 
@@ -146,6 +149,10 @@
   margin: 0 0 10px;
   padding: 0;
   font-family: $main-font-2;
+
+  &:first-of-type {
+    padding-top: 2px;
+  }
 
   &:last-of-type {
     margin-bottom: 0;
