--- a/source/sass/blocks/main-banner.scss
+++ b/source/sass/blocks/main-banner.scss
@@ -23,8 +23,8 @@
   }
 
   @media (min-width: $tablet-width) {
-    padding: 62px 0 0;
-    min-height: 874px;
+    padding: 58px 0 0;
+    min-height: 868px;
 
     &::before {
       display: none;
@@ -33,7 +33,7 @@
 
   @media (min-width: $desktop-width) {
     position: static;
-    padding: 110px 0 0;
+    padding: 108px 0 0;
     min-height: 578px;
 
     &::before {
@@ -79,6 +79,7 @@
 
   @media (min-width: $tablet-width) {
     @include heading-tablet;
+    transform: translateX(-2px);
     max-width: 420px;
     margin: 0 0 41px;
     color: $text-color-2;
@@ -130,7 +131,7 @@
   line-height: 18px;
 
   @media (min-width: $tablet-width) {
-    padding: 14px 26px;
+    padding: 18px 26px;
     max-width: 244px;
     font-size: 20px;
   }
@@ -145,13 +146,13 @@
 }
 
 .main-banner__img-cont {
-  margin: 0 auto 3px;
+  margin: 0 auto;
   width: fit-content;
   background: transparent;
 
   @media (min-width: $tablet-width) {
     position: absolute;
-    top: 260px;
+    top: 259px;
     left: 30px;
     z-index: -1;
   }
@@ -161,7 +162,7 @@
     top: 0;
     left: 0;
     grid-area: i;
-    margin: -82px 0 0 -46px;
+    margin: -82px 0 0 -52px;
   }
 }
 
