Fix conflicts linter

--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -111,7 +111,7 @@
 
 .example__properties-subtitle {
   position: absolute;
-  top: calc(100% - 8px);;
+  top: calc(100% - 8px);
   left: 0;
   right: 0;
   z-index: 0;
