--- a/source/sass/blocks/mixins.scss
+++ b/source/sass/blocks/mixins.scss
@@ -25,6 +25,7 @@
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
+  transition: all 0.2s ease;
 
   &:hover {
     background-color: $button-active-color-1;
