--- a/source/sass/blocks/additional-gift.scss
+++ b/source/sass/blocks/additional-gift.scss
@@ -8,12 +8,12 @@
   justify-content: space-between;
   align-items: center;
   background-color: $main-color-2;
-  background-image: url("../img/catalog/gift-background-1x.jpg");
+  background-image: url("../img/catalog/gift-background-1x.webp");
   background-size: cover;
   background-repeat: no-repeat;
 
   @media (min-resolution: 2dppx) {
-    background-image: url("../img/catalog/gift-background-2x.jpg");
+    background-image: url("../img/catalog/gift-background-2x.webp");
   }
 
   &::before {
@@ -35,10 +35,10 @@
     max-height: 100%;
     padding: 57px 124px 61px 77px;
     flex-direction: row;
-    background-image: url("../img/catalog/gift-background-tablet-1x.jpg");
+    background-image: url("../img/catalog/gift-background-tablet-1x.webp");
 
     @media (min-resolution: 2dppx) {
-      background-image: url("../img/catalog/gift-background-tablet-2x.jpg");
+      background-image: url("../img/catalog/gift-background-tablet-2x.webp");
     }
   }
 
@@ -47,10 +47,10 @@
     padding: 56px 0 42px;
     margin: 0;
     flex-direction: column;
-    background-image: url("../img/catalog/gift-background-desktop-1x.jpg");
+    background-image: url("../img/catalog/gift-background-desktop-1x.webp");
 
     @media (min-resolution: 2dppx) {
-      background-image: url("../img/catalog/gift-background-desktop-2x.jpg");
+      background-image: url("../img/catalog/gift-background-desktop-2x.webp");
     }
   }
 }
