--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -82,7 +82,7 @@
   }
 
   @media (min-width: $tablet-width) {
-    width: 324px;
+    width: 100%;
     padding: 0 36px 39px;
     display: flex;
     flex-direction: column;
