--- a/source/sass/blocks/functions.scss
+++ b/source/sass/blocks/functions.scss
@@ -162,6 +162,7 @@
   align-items: center;
   column-gap: 15px;
   text-decoration: none;
+  transition: all 0.2s ease;
 
   @media (min-width: $tablet-width) {
     transform: translateX(1px);
