--- a/source/sass/blocks/main-banner.scss
+++ b/source/sass/blocks/main-banner.scss
@@ -12,13 +12,13 @@
     width: 100%;
     height: 302px;
     background-color: $main-color-2;
-    background-image: url("../img/main/promo-background-mobile-1x.jpg");
+    background-image: url("../img/main/promo-background-mobile-1x.webp");
     background-repeat: no-repeat;
     background-size: cover;
     z-index: -1;
 
     @media (min-resolution: 2dppx) {
-      background-image: url("../img/main/promo-background-mobile-2x.jpg");
+      background-image: url("../img/main/promo-background-mobile-2x.webp");
     }
   }
 
@@ -40,10 +40,10 @@
       display: block;
       width: 50%;
       min-height: 694px;
-      background-image: url("../img/main/promo-background-desktop-1x.jpg");
+      background-image: url("../img/main/promo-background-desktop-1x.webp");
 
       @media (min-resolution: 2dppx) {
-        background-image: url("../img/main/promo-background-desktop-2x.jpg");
+        background-image: url("../img/main/promo-background-desktop-2x.webp");
       }
     }
   }
