--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -8,6 +8,32 @@
   }
 }
 
+@keyframes slideDown {
+  from {
+    transform: translateY(-200px);
+  }
+
+  to {
+    transform: translateY(0);
+  }
+}
+
+@keyframes slideUp {
+  from {
+    transform: translateY(0);
+  }
+
+  to {
+    transform: translateY(-200px);
+  }
+}
+
+.nav--opened .nav__menu {
+  animation-name: slideDown;
+  animation-duration: 0.5s;
+  animation-iteration-count: 1;
+}
+
 .nav--nojs .nav__toggle {
   display: none;
 }
@@ -21,7 +47,7 @@
 }
 
 .nav--nojs .nav__menu {
-  position: static;
+  z-index: 3;
 }
 
 .nav__menu {
@@ -85,7 +111,7 @@
     position: absolute;
     top: calc(100% - 1px);
     left: -20px;
-    width: 100vw;
+    width: calc(100vw + 20px);
     height: 1px;
     background-color: $extra-color-1;
     content: "";
@@ -157,6 +183,7 @@
   display: flex;
   justify-content: center;
   text-decoration: none;
+  transition: all 0.2s ease;
 
   @media (min-width: $tablet-width) {
     position: relative;
@@ -224,6 +251,7 @@
   position: absolute;
   top: 13px;
   right: 20px;
+  z-index: 3;
   margin: 0;
   padding: 0;
   width: 32px;
@@ -231,6 +259,12 @@
   background-color: $main-color-1;
   border: none;
   cursor: pointer;
+  transition: all 0.2s ease;
+
+  &::before,
+  ::after {
+    transition: all 0.2s ease;
+  }
 
   @media (min-width: $tablet-width) {
     display: none;
@@ -245,6 +279,7 @@
     left: 8px;
     right: 0;
     bottom: 7px;
+    width: 24px;
     height: 1.5px;
     background-color: $button-icon-color-1;
     box-shadow: 0 8px 0 0 $button-icon-color-1, 0 16px 0 0 $button-icon-color-1;
@@ -291,5 +326,44 @@
   &:active::before,
   &:active::after {
     background-color: rgba($button-icon-color-1, 30%);
+  }
+}
+
+.nav--closing .nav__menu {
+  animation-name: slideUp;
+  animation-duration: 0.5s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
+.nav--closing .nav__toggle {
+  &::before {
+    content: "";
+    position: absolute;
+    top: 9px;
+    left: 8px;
+    right: 0;
+    bottom: 7px;
+    transform: rotate(0);
+    width: 24px;
+    height: 1.5px;
+    background-color: $button-icon-color-1;
+    box-shadow: 0 8px 0 0 $button-icon-color-1, 0 16px 0 0 $button-icon-color-1;
+  }
+
+  &:hover::before {
+    background-color: rgba($button-icon-color-1, 60%);
+    box-shadow: 0 8px 0 0 rgba($button-icon-color-1, 60%),
+    0 16px 0 0 rgba($button-icon-color-1, 60%);
+  }
+
+  &:active::before {
+    background-color: rgba($button-icon-color-1, 30%);
+    box-shadow: 0 8px 0 0 rgba($button-icon-color-1, 30%),
+    0 16px 0 0 rgba($button-icon-color-1, 30%);
+  }
+
+  &::after {
+    display: none;
   }
 }
