--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -67,6 +67,8 @@
   margin: 0 0 34px;
   display: flex;
   justify-content: space-between;
+  row-gap: 20px;
+  flex-wrap: wrap;
 
   @media (min-width: $tablet-width) {
     margin: 0;
