--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -6,33 +6,31 @@
   &--alter-background {
     background-color: $main-color-3;
   }
-
-  @media (min-width: $desktop-width) {
-    padding: 0;
-  }
 }
 
 .map__container {
-  position: relative;
   overflow: visible;
 }
 
 .map__banner {
+  max-width: 400px;
+  margin: 0 auto;
   padding: 26px 0 26px;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 
   @media (min-width: $tablet-width) {
+    max-width: 920px;
     padding: 56px 40px 60px;
   }
 
   @media (min-width: $desktop-width) {
-    position: absolute;
-    top: 95px;
-    left: 110px;
+    position: relative;
     width: 565px;
-    height: 198px;
-    margin: 0;
+    max-width: none;
+    min-height: 198px;
+    margin: 95px 0 107px;
     padding: 56px 75px 56px 80px;
     background-color: $main-color-1;
     z-index: 1;
@@ -42,7 +40,7 @@
 .map__banner-title {
   margin: 0;
   min-width: 139px;
-  max-width: 164px;
+  max-width: 140px;
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
@@ -51,6 +49,7 @@
 
   @media (min-width: $tablet-width) {
     transform: translateY(3px);
+    max-width: 164px;
     font-size: 20px;
     line-height: 26px;
   }
@@ -60,7 +59,7 @@
   transform: translateX(2px);
   margin: 0;
   width: fit-content;
-  max-width: 160px;
+  max-width: 140px;
   font-family: $main-font-2;
   font-size: 14px;
   line-height: 20px;
@@ -68,6 +67,7 @@
 
   @media (min-width: $tablet-width) {
     transform: translateX(1px);
+    max-width: 164px;
     display: flex;
     flex-direction: column;
     row-gap: 20px;
@@ -77,7 +77,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    transform: translate(0);
+    transform: translateX(3px);
     text-align: start;
   }
 }
@@ -87,7 +87,6 @@
   display: block;
   width: 100vw;
   height: 362px;
-  background-image: url("../img/map.png");
   border: none;
 
   @media (min-width: $tablet-width) {
@@ -96,7 +95,26 @@
   }
 
   @media (min-width: $desktop-width) {
+    position: absolute;
+    top: 0;
+    left: 0;
     margin-left: calc(-50vw + 50%);
     width: calc(100vw);
+    min-height: 400px;
+    height: 100%;
+  }
+}
+
+.map__image {
+  margin: 0 auto;
+  object-fit: contain;
+
+  @media (min-width: $tablet-width) {
+    width: 708px;
+    height: 400px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 1220px;
   }
 }
