--- a/source/sass/blocks/request.scss
+++ b/source/sass/blocks/request.scss
@@ -4,11 +4,11 @@
   overflow-x: clip;
 
   @media (min-width: $tablet-width) {
-    padding: 65px 0 0;
+    padding: 59px 0 0;
   }
 
   @media (min-width: $desktop-width) {
-    padding: 74px 0 0;
+    padding: 72px 0 0;
   }
 }
 
@@ -47,7 +47,7 @@
   }
 
   &:last-of-type {
-    margin-bottom: 39px;
+    margin-bottom: 40px;
 
     @media (min-width: $tablet-width) {
       margin-bottom: 66px;
@@ -61,17 +61,16 @@
 
 .request__form-cont {
   @media (min-width: $tablet-width) {
-    padding: 0 37px 71px 41px;
+    padding: 0 37px 74px 41px;
     display: flex;
     flex-direction: column;
-    row-gap: 72px;
+    row-gap: 71px;
   }
 
   @media (min-width: $desktop-width) {
     margin: 0 0 69px;
     padding: 0;
     flex-direction: row;
-    justify-content: space-between;
     column-gap: 80px;
     row-gap: 0;
   }
@@ -105,7 +104,7 @@
   }
 
   &--cat-data {
-    padding-bottom: 24px;
+    padding-bottom: 21px;
 
     @media (min-width: $tablet-width) {
       padding: 0;
@@ -114,7 +113,7 @@
 
   &--course-type {
     position: relative;
-    padding-top: 22px;
+    padding-top: 24px;
     padding-bottom: 19px;
     margin-bottom: 26px;
 
@@ -168,20 +167,20 @@
   }
 
   &--comment {
-    padding-bottom: 23px;
+    padding-bottom: 20px;
 
     @media (min-width: $tablet-width) {
       padding-top: 0;
-      padding-bottom: 65px;
+      padding-bottom: 62px;
     }
 
     @media (min-width: $desktop-width) {
-      padding-bottom: 67px;
+      padding-bottom: 65px;
     }
   }
 
   &--extra {
-    padding-bottom: 34px;
+    padding-bottom: 32px;
 
     @media (min-width: $tablet-width) {
       padding: 0 135px 72px 40px;
@@ -195,7 +194,7 @@
   &--with-lines {
     &::before {
       position: absolute;
-      top: 14px;
+      top: 12px;
       right: -20px;
       z-index: -1;
       width: calc(100vw - 40px);
@@ -208,6 +207,14 @@
         right: -100vw;
         width: 200vw;
       }
+    }
+  }
+
+  &--contacts::before {
+    top: 16px;
+
+    @media (min-width: $tablet-width) {
+      top: 23px;
     }
   }
 }
@@ -273,8 +280,8 @@
 .request__form-group {
   position: relative;
   margin: 0 0 14px 0;
-  display: flex;
-  align-items: center;
+  display: grid;
+  grid-template-columns: auto 1fr;
   column-gap: 13px;
   transition: all 0.2s ease;
 
@@ -294,12 +301,17 @@
     column-gap: 10px;
 
     @media (min-width: $tablet-width) {
-      column-gap: 20px;
+      margin-bottom: 21px;
+      column-gap: 22px;
     }
 
     @media (min-width: $desktop-width) {
       margin: 0;
     }
+  }
+
+  &--comment {
+    margin: 0;
   }
 }
 
@@ -308,11 +320,16 @@
 }
 
 .request__form-text {
-  min-width: fit-content;
+  width: max-content;
+  padding-top: 12px;
+  max-width: 95px;
+  flex-shrink: 0;
   font-size: 16px;
   text-transform: uppercase;
 
   @media (min-width: $tablet-width) {
+    padding-top: 10px;
+    max-width: 140px;
     font-size: 20px;
     line-height: 30px;
   }
@@ -320,20 +337,30 @@
 
 .request__form-purpose-control {
   display: flex;
-  align-items: center;
+  flex-wrap: wrap;
+  align-items: flex-start;
   column-gap: 15px;
   cursor: pointer;
   transition: all 0.2s ease;
+
+  &--disabled {
+    opacity: 0.3;
+    pointer-events: none;
+  }
 
   @media (min-width: $tablet-width) {
     column-gap: 20px;
   }
 }
 
+.request__form-purpose-input:focus-visible + .request__form-purpose-mark {
+  outline: 2px solid;
+}
 
 .request__form-purpose-mark {
   width: 30px;
   height: 30px;
+  flex-shrink: 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -369,9 +396,12 @@
 }
 
 .request__form-purpose-label {
+  max-width: 80%;
+  padding-top: 6px;
   font-size: 16px;
   text-transform: uppercase;
   color: $text-color-4;
+  word-break: break-word;
 
   @media (min-width: $tablet-width) {
     font-size: 20px;
@@ -381,32 +411,47 @@
 
 .request__form-additional-control {
   display: flex;
-  align-items: center;
+  flex-wrap: wrap;
+  align-items: flex-start;
   column-gap: 16px;
   cursor: pointer;
   transition: all 0.2s ease;
+
+  &--disabled {
+    opacity: 0.3;
+    pointer-events: none;
+  }
 
   @media (min-width: $tablet-width) {
     column-gap: 20px;
   }
 }
 
+.request__form-additional-input:focus-visible + .request__form-additional-mark {
+  outline: 2px solid;
+}
+
 .request__form-additional-label {
+  max-width: 80%;
+  padding-top: 7px;
   font-size: 16px;
   text-transform: uppercase;
   color: $text-color-2;
+  word-break: break-word;
 
   @media (min-width: $tablet-width) {
+    max-width: 170px;
+    padding-top: 5px;
     font-size: 20px;
     line-height: 30px;
   }
 }
 
-
 .request__form-additional-mark {
   position: relative;
   width: 30px;
   height: 30px;
+  flex-shrink: 0;
   border: 1px solid $extra-color-2;
   transition: all 0.2s ease;
 
@@ -446,6 +491,7 @@
 
 .request__form-field {
   width: 100%;
+  max-height: 47px;
   margin: 0;
   padding: 13px 19px 12px;
   font-family: $main-font-1;
@@ -461,7 +507,8 @@
   }
 
   @media (min-width: $tablet-width) {
-    padding: 11px 20px;
+    max-height: 54px;
+    padding: 10px 20px;
     font-size: 20px;
     line-height: 30px;
   }
@@ -470,21 +517,45 @@
     padding: 13px 45px 12px 14px;
 
     @media (min-width: $tablet-width) {
-      padding: 11px 50px 11px 20px;
+      padding: 10px 50px 10px 20px;
+    }
+  }
+
+  &--tel {
+    @media (min-width: $tablet-width) {
+      padding-left: 18px;
     }
   }
 }
 
+.request__form-group:focus-within .request__form-field {
+  border: solid 1px #444444;
+  outline: solid 1px #444444;
+}
+
+.request__form-group:focus-within .request__form-icon {
+  color: variables.$main-color-2;
+}
+
+.request__form-field:invalid {
+  border: solid 1px #ff8282;
+  outline: solid 1px #ff8282;
+}
+
+.request__form-field:invalid + .request__form-icon {
+  color: #ff8282;
+}
+
 .request__form-icon {
   position: absolute;
-  top: 12px;
+  top: 13px;
   right: 15px;
   color: $text-color-2;
   transition: all 0.2s ease;
 
   @media (min-width: $tablet-width) {
     top: 16px;
-    right: 18px;
+    right: 17px;
   }
 }
 
@@ -528,6 +599,11 @@
   }
 }
 
+.request__form-field-textarea:invalid {
+  border: solid 1px #ff8282;
+  outline: solid 1px #ff8282;
+}
+
 .request__form-purpose {
   margin: 0;
   padding: 0;
@@ -550,9 +626,9 @@
   @media (min-width: $tablet-width) {
     margin-bottom: 54px;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr auto;
     column-gap: 64px;
-    row-gap: 32px;
+    row-gap: 31px;
   }
 
   @media (min-width: $desktop-width) {
@@ -565,6 +641,10 @@
 
 .request__form-additional-item {
   width: 100%;
+
+  &:first-of-type {
+    margin-bottom: 1px;
+  }
 }
 
 .request__form-purpose-item {
@@ -578,7 +658,7 @@
 .request__form-btn-cont {
   @media (min-width: $tablet-width) {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr auto;
     align-items: center;
     column-gap: 64px;
     row-gap: 32px;
@@ -607,20 +687,23 @@
 }
 
 .request__form-caption {
-  max-width: fit-content;
+  width: fit-content;
+  max-width: 200px;
   margin: 0 auto;
   font-family: $main-font-2;
   line-height: 16px;
   color: $text-color-2;
 
   @media (min-width: $tablet-width) {
-    margin: 0;
+    transform: translate(-1px, -4px);
+    margin: 0 8px 0 0;
     padding-left: 2px;
     font-size: 16px;
     text-align: start;
   }
 
   @media (min-width: $desktop-width) {
+    transform: translate(-1px, -3px);
     padding: 0;
   }
 }
