--- a/source/sass/blocks/request.scss
+++ b/source/sass/blocks/request.scss
@@ -534,7 +534,7 @@
 }
 
 .request__form-group:focus-within .request__form-icon {
-  color: variables.$main-color-2;
+  color: $main-color-2;
 }
 
 .request__form-field:invalid {
