--- a/source/sass/blocks/additional-gift.scss
+++ b/source/sass/blocks/additional-gift.scss
@@ -1,6 +1,6 @@
 .additional__gift {
   width: 100%;
-  height: 290px;
+  min-height: 290px;
   margin: 0 auto;
   padding: 59px 0 43px 0;
   display: flex;
@@ -10,6 +10,7 @@
   background-color: $main-color-2;
   background-image: url("../img/catalog/gift-background-1x.webp");
   background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
 
   @media (min-resolution: 2dppx) {
@@ -32,6 +33,9 @@
   }
 
   @media (min-width: $tablet-width) {
+    margin: 0 0 0 1px;
+    min-height: 100px;
+    height: 100%;
     max-height: 100%;
     padding: 57px 124px 61px 77px;
     flex-direction: row;
@@ -44,6 +48,7 @@
 
   @media (min-width: $desktop-width) {
     width: 245px;
+    min-height: 289px;
     padding: 56px 0 42px;
     margin: 0;
     flex-direction: column;
@@ -66,10 +71,12 @@
   text-align: center;
 
   @media (min-width: $tablet-width) {
+    transform: translate(0, 3px);
     text-align: start;
   }
 
   @media (min-width: $desktop-width) {
+    transform: translate(0, 0);
     text-align: center;
   }
 }
