--- a/source/sass/blocks/functions.scss
+++ b/source/sass/blocks/functions.scss
@@ -157,6 +157,7 @@
   padding: 4px 0;
   display: flex;
   justify-content: flex-start;
+  flex-wrap: wrap;
   align-items: center;
   column-gap: 15px;
   text-decoration: none;
@@ -182,7 +183,7 @@
 }
 
 .functions__item-btn-text {
-  max-width: 80%;
+  max-width: 60%;
   font-size: 16px;
   line-height: 16px;
   color: $text-color-2;
