--- a/source/sass/blocks/main-banner.scss
+++ b/source/sass/blocks/main-banner.scss
@@ -15,6 +15,7 @@
     background-color: $main-color-2;
     background-image: url("../img/main/promo-background-mobile-1x.webp");
     background-repeat: no-repeat;
+    background-position: center;
     background-size: cover;
     z-index: -1;
 
@@ -58,11 +59,15 @@
   padding: 0;
 
   @media (min-width: $tablet-width) {
+    max-width: 708px;
+    margin: 0 auto;
     align-items: start;
     padding: 0 0 0 90px;
   }
 
   @media (min-width: $desktop-width) {
+    max-width: none;
+    margin: 0;
     padding: 0 0 0 80px;
     display: grid;
     grid-template-areas: ". i" ". i" ". i" ". i" ". i" ". i" ". i" ". i";
@@ -113,7 +118,7 @@
     text-align: start;
 
     &:last-of-type {
-      margin-bottom: 49px;
+      margin-bottom: 50px;
     }
   }
 
@@ -132,12 +137,14 @@
   line-height: 18px;
 
   @media (min-width: $tablet-width) {
+    transform: translate(1px, -1px);
     padding: 18px 26px;
     max-width: 244px;
     font-size: 20px;
   }
 
   @media (min-width: $desktop-width) {
+    transform: translate(0);
     grid-column: 1;
   }
 
@@ -153,13 +160,15 @@
 
   @media (min-width: $tablet-width) {
     position: absolute;
-    top: 259px;
-    left: 30px;
+    transform: translateX(-50%);
+    bottom: -3px;
+    left: 50%;
     z-index: -1;
   }
 
   @media (min-width: $desktop-width) {
     position: relative;
+    transform: translateX(0);
     top: 0;
     left: 0;
     grid-area: i;
