--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -52,7 +52,7 @@
 
   @media (min-width: $tablet-width) {
     max-width: 460px;
-    margin-bottom: 80px;
+    margin-bottom: 87px;
     padding: 0 36px 0 37px;
     font-size: 36px;
     line-height: 36px;
@@ -164,9 +164,9 @@
 
   @media (min-width: $desktop-width) {
     width: auto;
-    margin-right: 40px;
-    min-width: 32%;
-    justify-content: space-between;
+    min-width: 570px;
+    justify-content: unset;
+    column-gap: 0;
   }
 }
 
@@ -192,7 +192,7 @@
 
   @media (min-width: $desktop-width) {
     transform: translate(2px, 0);
-    padding-top: 10px;
+    padding-top: 14px;
     min-width: 42px;
     max-width: 160px;
     width: 131px;
@@ -208,6 +208,8 @@
     @media (min-width: $desktop-width) {
       transform: translate(1px, 0);
       max-width: 42px;
+      margin-left: 112px;
+      margin-right: 41px;
     }
   }
 
@@ -257,5 +259,88 @@
     margin-top: 0;
     transform: translateY(1px);
     width: 244px;
+  }
+}
+
+.additional__gift {
+  width: 100%;
+  min-height: 290px;
+  margin: 0 auto;
+  padding: 59px 0 43px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  background-color: $main-color-2;
+  background-image: url("../img/catalog/gift-background-1x.webp");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/catalog/gift-background-2x.webp");
+  }
+
+  &::before {
+    width: 78px;
+    height: 80px;
+    content: "";
+    background-image: url("../img/catalog/icon-gift-mobile.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+
+    @media (min-width: $tablet-width) {
+      background-image: url("../img/catalog/icon-gift-tablet.svg");
+      width: 80px;
+      height: 82px;
+    }
+  }
+
+  @media (min-width: $tablet-width) {
+    margin: 0 0 0 1px;
+    min-height: 100px;
+    height: 100%;
+    max-height: 100%;
+    padding: 57px 124px 61px 77px;
+    flex-direction: row;
+    background-image: url("../img/catalog/gift-background-tablet-1x.webp");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/catalog/gift-background-tablet-2x.webp");
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 245px;
+    min-height: 289px;
+    padding: 56px 0 42px;
+    margin: 0;
+    flex-direction: column;
+    background-image: url("../img/catalog/gift-background-desktop-1x.webp");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/catalog/gift-background-desktop-2x.webp");
+    }
+  }
+}
+
+.additional__gift-title {
+  transform: translateX(-1px);
+  margin: 0;
+  max-width: 162px;
+  font-family: $main-font-2;
+  font-size: 16px;
+  line-height: 20px;
+  color: $main-color-1;
+  text-align: center;
+
+  @media (min-width: $tablet-width) {
+    transform: translate(0, 3px);
+    text-align: start;
+  }
+
+  @media (min-width: $desktop-width) {
+    transform: translate(0, 0);
+    text-align: center;
   }
 }
