--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -232,7 +232,7 @@
   justify-content: center;
 
   @media (min-width: $tablet-width) {
-    margin: 0 75px;
+    margin: 0 auto;
     max-height: none;
   }
 
@@ -267,6 +267,18 @@
   @media (min-width: $tablet-width) {
     width: 560px;
     height: 512px;
+  }
+}
+
+.example__interactive-img {
+  max-width: 280px;
+  width: 100%;
+  max-height: 256px;
+  height: 100%;
+
+  @media (min-width: $tablet-width) {
+    max-width: 560px;
+    max-height: 512px;
   }
 }
 
