--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -103,19 +103,26 @@
     min-height: 400px;
     height: 100%;
   }
+
+  &--nojs {
+    display: none;
+  }
 }
 
 .map__image {
   display: none;
   margin: 0 auto;
   object-fit: contain;
-
-  @media (min-width: $tablet-width) {
-    width: 708px;
-    height: 400px;
-  }
+  width: 100%;
+  height: 400px;
 
   @media (min-width: $desktop-width) {
-    width: 1220px;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
+  &--nojs {
+    display: inline-block;
   }
 }
